--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@ body {
 .header {
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
+    flex-direction: column;
     border: 1px solid red;
     padding-bottom: 50px;
+    padding-top: 20px;
 }
 
 ul {
@@ -55,10 +54,16 @@ li {
     border: 1px solid red;
 }
 
+.header1-1 {
+    display: flex;
+    justify-content: space-around;
+}
+
 .container {
-    width: 450px;
+    width: 700px;
     padding-bottom: 10px;
-    /* border: 1px solid red; */
+    margin: 100px;
+    border: 1px solid red;
 }
 
 .button1 {
